--- a/Front/index.html
+++ b/Front/index.html
@@ -3,6 +3,20 @@
 <head>
     <title>PatStat</title>
     <meta charset="UTF-8" />
+    <style>
+        #map {
+            width: 100%;
+            height: 100%;
+        }
+        #marker {
+            width: 20px;
+            height: 20px;
+            border: 1px solid #088;
+            border-radius: 10px;
+            background-color: #0FF;
+            opacity: 0.5;
+        }
+    </style>
 </head>
 
 <body>
@@ -18,6 +32,12 @@
             }
         };
     </script>
+    <div id="map"></div>
+    <div style="display: none;">
+        <a class="overlay" id="brevetX" href="brevet.html">brevetX</a>
+        <div id="marker" title="Marker"></div>
+    </div>
+    <script src="index.js"></script>
 </body>
 
 </html>
