--- a/Front/index.html
+++ b/Front/index.html
@@ -4,89 +4,8 @@
     <title>PatStat</title>
     <meta charset="UTF-8" />
     <script src="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.2.1/build/ol.js"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.2.1/css/ol.css" type="text/css">
-    <style>
-        /* Enleve les bordures blanches */
-        body,
-        div#map {
-            left: 0;
-            top: 0;
-            margin: 0;
-            padding: 0;
-        }
-
-        div#map {
-            width: 100%;
-            height: 100%;
-        }
-
-        table#listOverlay {
-            position: fixed;
-            opacity: 1;
-            right: 25px;
-            top: 80px;
-            background-color: #2200FF22;
-            width: 100px;
-        }
-
-        div#interface {
-            position: fixed;
-            opacity: 1;
-            left: 5px;
-        }
-
-        table#listNuts {
-            position: inherit;
-            top: 80px;
-            background-color: #2200FF22;
-            width: 300px;
-        }
-
-        table#listNuts thead,
-        table#listNuts tfoot,
-		table#listBrevets thead,
-		table#listBrevets tfoot	{
-            display: block;
-            background-color: #2200FF55;
-        }
-
-        table#listNuts tr td:nth-child(3),
-        table#listNuts tfoot tr td:nth-child(4) {
-            background-color: white;
-            text-align: center;
-        }
-
-        table#listNuts tbody tr:nth-child(odd) {
-            background-color: #0022FF22;
-        }
-
-        table#listNuts tbody tr:hover, table#listBrevets tbody tr:hover {
-            background-color: white;
-        }
-
-        table#listNuts tbody, table#listBrevets tbody {
-            display: block;
-            height: 800px;
-            overflow-y: scroll;
-        }
-
-		table#listBrevets {
-			visibility:hidden;
-            position: inherit;
-            top: 80px;
-            background-color: #2200FF22;
-            width: 300px;
-        }
-		
-        div#marker {
-            width: 20px;
-            height: 20px;
-            border: 1px solid #088;
-            border-radius: 10px;
-            background-color: #0FF;
-            opacity: 0.5;
-        }
-    </style>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.2.1/css/ol.css" type="text/css" />
+    <link rel="stylesheet" href="style.css" type="text/css" />
 </head>
 
 <body>
@@ -100,8 +19,8 @@
                     <td width="10%">SB</td>
                     <td width="10%">HL</td>
                     <td width="5%">Focus</td>
-					<td width="5%">Nombre de brevets</td>
-					<td width="10%">Brevets</td>
+                    <td width="5%">Nombre de brevets</td>
+                    <td width="10%">Brevets</td>
                 </tr>
             </thead>
             <tbody></tbody>
@@ -111,23 +30,23 @@
                     <td width="20%">Down</td>
                     <td width="10%" id="totalNuts">0</td>
                     <td width="10%" id="totalSubNuts">0</td>
-                    <td width="40%"><button style="width: 100%" onclick="backBtn()">Back</button></td>
+                    <td width="40%"><button>Back</button></td>
                 </tr>
             </tfoot>
         </table>
-		<table id="listBrevets" border=1>
+        <table id="listBrevets" border=1>
             <thead>
                 <tr>
                     <td width="10%">ID</td>
                     <td width="30%">Applicant</td>
-					<td width="40%">Titre du brevet</td>
+                    <td width="40%">Titre du brevet</td>
                     <td width="20%">Date de dépôt</td>
                 </tr>
             </thead>
             <tbody></tbody>
             <tfoot>
                 <tr>
-                    <td width="40%"><button style="width: 100%" onclick="backBtn()">Back</button></td>
+                    <td width="40%"><button>Back</button></td>
                 </tr>
             </tfoot>
         </table>
