--- a/Front/index.html
+++ b/Front/index.html
@@ -5,7 +5,10 @@
     <meta charset="UTF-8" />
     <script src="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.2.1/build/ol.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.2.1/css/ol.css" type="text/css" />
-    <link rel="stylesheet" href="style.css" type="text/css" />
+    <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
+    <script src="assets/js/CustomMap.js"></script>
+    <script src="assets/js/fetcher.js"></script>
+    <script src="assets/js/index.js"></script>
 </head>
 
 <body>
@@ -66,7 +69,6 @@
         <a class="overlay" id="brevetX" href="brevet.html">brevetX</a>
         <div id="marker" title="Marker"></div>
     </div>
-    <script src="index.js"></script>
 </body>
 
 </html>
