Front : ajout highlight des collabs + paging liste des brevets

--- a/Front/index.html
+++ b/Front/index.html
@@ -50,6 +50,9 @@
             <tfoot>
                 <tr>
                     <td width="40%"><button>Back</button></td>
+                    <td width="20%"><button>Prev</button></td>
+                    <td width="20%">0/0</td>
+                    <td width="20%"><button>Next</button></td>
                 </tr>
             </tfoot>
         </table>
@@ -66,18 +69,18 @@
         </tbody>
     </table>
 
-	<select name="domaines_brevets" id="domaines_brevets" onchange="setDomaineCode()">
-    <option value="na"></option>
-    <option value="A">Nécessités courantes de la vie</option>
-    <option value="B">Techniques industrielles diverses; transports</option>
-    <option value="C">Chimie; métallurgie</option>
-    <option value="D">Textiles; papier</option>
-    <option value="E">Constructions fixes</option>
-    <option value="F">Mécaniques; éclairage; chauffage; armement; sautage</option>
-	<option value="G">Physique</option>
-	<option value="H">Electricité</option>
-	<option value="Y">Nouveaux développements technologiques</option>
-</select>
+    <select name="domaines_brevets" id="domaines_brevets">
+        <option value="na"></option>
+        <option value="A">Nécessités courantes de la vie</option>
+        <option value="B">Techniques industrielles diverses; transports</option>
+        <option value="C">Chimie; métallurgie</option>
+        <option value="D">Textiles; papier</option>
+        <option value="E">Constructions fixes</option>
+        <option value="F">Mécaniques; éclairage; chauffage; armement; sautage</option>
+        <option value="G">Physique</option>
+        <option value="H">Electricité</option>
+        <option value="Y">Nouveaux développements technologiques</option>
+    </select>
 </body>
 
 </html>
