Filtrage par année

--- a/Front/index.html
+++ b/Front/index.html
@@ -13,7 +13,9 @@
 
 <body>
     <div id="map"></div>
+	<input type="month" id="annees_brevets" name="annees_brevets">
     <div id="interface">
+	
         <table id="listNuts" border=1>
             <thead>
                 <tr>
@@ -57,6 +59,7 @@
             </tfoot>
         </table>
     </div>
+	
     <table id="listOverlay" border=1>
         <thead>
             <tr>
@@ -69,6 +72,7 @@
         </tbody>
     </table>
 
+	
     <select name="domaines_brevets" id="domaines_brevets">
         <option value="na"></option>
         <option value="A">Nécessités courantes de la vie</option>
